--- a/Client/src/components/horseRace/dataPlayerHorseRace/dataPlayerHorseRace.module.css
+++ b/Client/src/components/horseRace/dataPlayerHorseRace/dataPlayerHorseRace.module.css
@@ -14,11 +14,6 @@
   gap: 1rem;
 }
 
-.obligatedIcon {
-  color: gold;
-  font-size: 20px;
-}
-
 .avatar img,.avatar video {
   width: 80px;
   height: auto;
@@ -37,70 +32,88 @@
   margin-top: 0.5rem;
 }
 
-.table_component {
-  overflow: auto;
-  width: 150px;
+
+@media only screen and (max-width: 840px) {
+  .infoPropia {
+    width: auto;
+    height: auto;
+    position: absolute;
+    bottom: 2.5%;
+    left: 1%;
+    z-index: 1;
+    text-align: center;
+    border-radius: 10px;
+    padding: 1rem;
+    color: #ff904f;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  
+  .avatar img,.avatar video {
+    width: 50px;
+    height: auto;
+    border-radius: 50%;
+    margin: 0;
+  }
+  
+  .avatar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
+    color: #fff;
+    gap: 0.5rem;
+    margin-top: 0.5rem;
+  }
+  
+  
+  .cards {
+    position: relative;
+    height: fit-content;
+    border: 3px solid darkgoldenrod;
+    border-radius: 13px;
+    transition: top 0.5s ease-in-out;
+  }
 }
 
-.table_component table {
-  border: 1px solid #dededf;
-  width: 100%;
-  border-collapse: collapse;
-  background-color: #3b3b3b;
-  color: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+@media only screen and (max-width: 480px) {
+  .infoPropia {
+    width: auto;
+    height: auto;
+    position: absolute;
+    bottom: 2.5%;
+    left: 1%;
+    z-index: 1;
+    text-align: center;
+    border-radius: 10px;
+    padding: 0.5rem;
+    color: #ff904f;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  
+  .avatar img,.avatar video {
+    width: 40px;
+    height: auto;
+    border-radius: 50%;
+    margin: 0;
+  }
+  
+  .avatar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
+    color: #fff;
+    gap: 0.5rem;
+    margin-top: 0.5rem;
+  }
+  
 }
 
-.table_component th {
-  background-color: #ff904f;
-  color: #ffffff;
-  padding: 5px;
-  font-size: 1.5rem;
-  flex: 1;
-}
 
-.table_component td {
-  flex: 1;
-  border: 1px solid #dededf;
-  color: #ff904f;
-  padding: 5px;
-  font-size: 1rem;
-}
 
-.table_component tbody tr:nth-child(even) {
-  background-color: #444;
-}
-
-.fulfilled {
-  color: #00ff00 !important;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.notFulfilled {
-  color: #ff0000 !important;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.icon {
-  margin-left: 5px;
-}
-
-.progressBar {
-  width: 100%;
-  height: 10px;
-  background-color: #ddd;
-  border-radius: 5px;
-  overflow: hidden;
-  margin-top: 10px;
-  position: relative;
-}
-
-.progress {
-  height: 100%;
-  transition: width 0.5s linear, background-color 0.5s linear;
-  background-color: #4CAF50;
-}
