--- a/Client/src/components/horseRace/cards/cardsHorse.module.css
+++ b/Client/src/components/horseRace/cards/cardsHorse.module.css
@@ -83,3 +83,32 @@
   border-radius: 10px;
   z-index: 0;
 }
+
+@media only screen and (max-width: 840px) {
+  .spanishDeck {
+    width: 50px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(135deg, #f5f5f5, #e0e0e0);
+    border-radius: 10px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+      rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    position: relative;
+  }
+  .cardImage {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .cardImageBack {
+    width: 50px;
+    height: 100px;
+  }
+}
