--- a/Client/src/components/horseRace/deckRight/deckRight.module.css
+++ b/Client/src/components/horseRace/deckRight/deckRight.module.css
@@ -8,3 +8,17 @@
     border-radius: 10px;
   }
   
+
+  
+@media only screen and (max-width: 840px) {
+  .cardsContainMazo {
+    position: absolute;
+    bottom:15%;
+    left: 84%;
+    padding: 0rem;
+    border: 3px solid darkgoldenrod;
+    border-radius: 10px;
+  }
+ 
+}
+
