--- a/Client/src/components/horseRace/horseContain/horseContain.module.css
+++ b/Client/src/components/horseRace/horseContain/horseContain.module.css
@@ -6,7 +6,7 @@
   width: 100%;
   height: 80vh;
   top: 0;
-  column-gap: 4rem;
+  column-gap: 2%;
   margin-top: 1rem;
 }
 
@@ -19,8 +19,8 @@
 }
 
 /* Clases para diferentes posiciones en el eje Y */
-.yPos0{
-  top:-10%
+.yPos0 {
+  top: -10%;
 }
 .yPos1 {
   top: 0%;
@@ -44,4 +44,49 @@
 
 .yPos6 {
   top: 100%;
+}
+
+@media only screen and (max-width: 840px) {
+  .Contain {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    justify-content: center;
+    width: 100%;
+    height: 80vh;
+    top: 0;
+    margin-top: 1rem;
+    margin-right: 7rem;
+    column-gap: 5%;
+  }
+
+  .cards {
+    position: relative;
+    height: fit-content;
+    border: 3px solid darkgoldenrod;
+    border-radius: 13px;
+    transition: top 0.5s ease-in-out;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .Contain {
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    justify-content: flex-end;
+    width: 100%;
+    height: 80vh;
+    top: 0;
+    padding-right: 0.5rem;
+    column-gap: 0.50rem;
+  }
+
+  .cards {
+    position: relative;
+    height: fit-content;
+    border: 3px solid darkgoldenrod;
+    border-radius: 13px;
+    transition: top 0.5s ease-in-out;
+  }
 }
