--- a/Client/src/pages/HorseRaceGame/horseRace/horseRace.module.css
+++ b/Client/src/pages/HorseRaceGame/horseRace/horseRace.module.css
@@ -1,6 +1,6 @@
 .contain {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   padding: 0;
   margin: 0;
   display: flex;
@@ -10,9 +10,28 @@
   font-family: "Bebas Neue", sans-serif;
   background-image: url("../../../../src/assets/global/fondoo.png");
   background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+  background-size: auto;
+  position: absolute;
 }
 
+.toggleTableButton {
+  display: none;
+  font-size: 1rem;
+  padding: 0.5rem ;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 1%;
+  right: 2.5%;
+}
 
+.toggleTableButton:hover {
+  background-color: #557a9d;
+}
 
+@media only screen and (max-width: 1170px) {
+  .toggleTableButton {
+    display: flex;
+  }
+}
