--- a/Client/src/components/homePage/sesionLogged/sesionLogged.module.css
+++ b/Client/src/components/homePage/sesionLogged/sesionLogged.module.css
@@ -51,6 +51,7 @@
   background-color: rgb(255, 255, 255);
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   transform: scale(1.05);
+  transition: transform 0.3s ease;
 }
 
 .userInfo {
@@ -92,7 +93,6 @@
   .authButton,
   .logoutBtn {
     font-size: 1rem;
-    padding: 0.4rem 1.2rem;
   }
 
   .userInfo {
@@ -119,7 +119,6 @@
   .authButton,
   .logoutBtn {
     font-size: 0.9rem;
-    padding-inline:0 1rem;
   }
 
   .userInfo {
