--- a/Client/src/components/horseRace/dataPlayerHorseRace/dataPlayerHorseRace.module.css
+++ b/Client/src/components/horseRace/dataPlayerHorseRace/dataPlayerHorseRace.module.css
@@ -14,7 +14,8 @@
   gap: 1rem;
 }
 
-.avatar img,.avatar video {
+.avatar img,
+.avatar video {
   width: 80px;
   height: auto;
   border-radius: 50%;
@@ -32,6 +33,54 @@
   margin-top: 0.5rem;
 }
 
+.name {
+  color: #fff;
+}
+
+.rainbow_text {
+  font-size: 2rem;
+  font-weight: bold;
+  animation: rainbow 5s linear infinite;
+}
+
+@keyframes rainbow {
+  0% {
+    color: red;
+  }
+  14% {
+    color: orange;
+  }
+  28% {
+    color: yellow;
+  }
+  42% {
+    color: green;
+  }
+  57% {
+    color: blue;
+  }
+  71% {
+    color: indigo;
+  }
+  85% {
+    color: violet;
+  }
+  100% {
+    color: red;
+  }
+}
+
+.red_text {
+  color: red;
+}
+
+.blue_text {
+  color: blue;
+}
+
+.green_text {
+  color: green;
+}
 
 @media only screen and (max-width: 840px) {
   .infoPropia {
@@ -49,14 +98,15 @@
     flex-direction: column;
     gap: 1rem;
   }
-  
-  .avatar img,.avatar video {
+
+  .avatar img,
+  .avatar video {
     width: 50px;
     height: auto;
     border-radius: 50%;
     margin: 0;
   }
-  
+
   .avatar {
     display: flex;
     flex-direction: column;
@@ -67,8 +117,7 @@
     gap: 0.5rem;
     margin-top: 0.5rem;
   }
-  
-  
+
   .cards {
     position: relative;
     height: fit-content;
@@ -94,14 +143,15 @@
     flex-direction: column;
     gap: 1rem;
   }
-  
-  .avatar img,.avatar video {
+
+  .avatar img,
+  .avatar video {
     width: 40px;
     height: auto;
     border-radius: 50%;
     margin: 0;
   }
-  
+
   .avatar {
     display: flex;
     flex-direction: column;
@@ -112,8 +162,5 @@
     gap: 0.5rem;
     margin-top: 0.5rem;
   }
-  
 }
-
-
 
